@@ -2370,6 +2370,20 @@ SELECT CASE AS CONST id
     sl->Y = retvals(2) + SliceYAnchor(sl) - SliceEdgeY(sl, retvals(1))
    END IF
   END IF
+ CASE 464 '--get slice lookup
+  IF valid_plotslice(retvals(0)) THEN
+   scriptret = plotslices(retvals(0))->Lookup
+  END IF
+ CASE 465 '--set slice lookup
+  IF valid_plotslice(retvals(0)) THEN
+   IF retvals(1) < 0 THEN
+    scripterr commandname(curcmd->value) & ": can't set special lookup codes.", 6
+   ELSEIF plotslices(retvals(0))->Lookup < 0 THEN
+    scripterr commandname(curcmd->value) & ": can't modify special lookup codes.", 6
+   ELSE
+    plotslices(retvals(0))->Lookup = retvals(1)
+   END IF
+  END IF
 
 END SELECT
 
